# AAI-6640-DL-Final-Project

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
artifacts/checkpoints/: tft_fold_1.pt
config/: accuracy_90.yaml  default.yaml  high_accuracy.yaml  kfold_cv.yaml  kpi_dual.yaml
data/raw/: .gitkeep
frontend/: README.md  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/help/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/dashboard/: backtest-comparison.tsx  backtest-equity-curve.tsx  confusion-matrix.tsx  control-panel.tsx  dashboard-page.tsx  data-quality-card.tsx  decision-biases-card.tsx  feature-pill-list.tsx  guide-panel.tsx  key-findings-card.tsx  kpi-gate-card.tsx  mcnemar-matrix.tsx  metric-cards.tsx  model-performance-chart.tsx  (+6 more)
frontend/src/hooks/: use-dashboard-data.ts
frontend/src/lib/: http.ts  schemas.ts
frontend/src/providers/: app-providers.tsx
frontend/src/store/: dashboard-store.ts
notebooks/: 01_data_exploration.ipynb  02_training.ipynb  03_evaluation.ipynb
scripts/: create_project_presentation.ps1
src/: __init__.py  main.py  pipeline.py
src/data/: __init__.py  cleaning.py  dataset.py  download.py  features.py  labels.py
src/evaluation/: __init__.py  backtest.py  feature_importance.py  pipeline.py  volatility_analysis.py
src/models/: __init__.py  cnn_lstm.py  lstm.py  tft.py
src/training/: __init__.py  losses.py  metrics.py  trainer.py
src/utils/: config.py
(+6 files in other folders)
